# voice-graph-flow-backend

./: .dockerignore  Dockerfile  README.md  chunking.py  database.py  doc_converter_test.py  embedding.py  index_document.py  main.py  nextjs_example.ts  pyproject.toml  test_chunking.py
app/: database.py  embedding.py  main.py
app/api/: search_api.py  uploader.py
docker-mongodb/: docker-compose.yml  init-mongo.sh  mongod.conf  mongot.conf
docs/: index.md  roadmap.md
docs/techinical-reference/: architecture.md  docling.md  mongodb-local-setup.md  mongodb.md  search.md
scripts/: index_document.py  test_vector_score.py
src/rag_system/: __init__.py
